--- a/AndroidProject/app/src/main/res/layout/activity_main_item.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_item.xml
@@ -16,7 +16,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tvInfo"
+        android:id="@+id/tvInfoAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
+        app:layout_constraintBottom_toTopOf="@+id/tvInfoAddress"
         app:layout_constraintStart_toStartOf="@+id/tvTitle"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
