--- a/AndroidProject/app/src/main/res/layout/filter_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/filter_menu.xml
@@ -17,40 +17,120 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:background="#E0E0E0"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvFiltroCompanhia"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1.2"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvFiltrar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#1565C0"
+                    android:gravity="center"
+                    android:text="Filtrar"
+                    android:textColor="#FFFFE0"
+                    android:textSize="35sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Filtrar por compañía"
-                android:textSize="25sp" />
+                android:orientation="vertical"
+                android:paddingLeft="40dp">
 
-            <Spinner
-                android:id="@+id/spnCompanhia"
+                <TextView
+                    android:id="@+id/tvFiltroCompanhia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|left"
+                    android:text="Compañía"
+                    android:textSize="23sp" />
+
+                <Spinner
+                    android:id="@+id/spnCompanhia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:dropDownWidth="match_parent" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingLeft="40dp">
+
+                <TextView
+                    android:id="@+id/tvProvincia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Provincia"
+                    android:textSize="23sp" />
+
+                <Spinner
+                    android:id="@+id/spnProvincia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:dropDownWidth="match_parent" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTintMode="add"
+                android:orientation="vertical"
+                android:paddingLeft="40dp">
+
+                <TextView
+                    android:id="@+id/tvLocalidad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Localidad"
+                    android:textSize="23sp" />
+
+                <Spinner
+                    android:id="@+id/spnLocalidad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:dropDownWidth="match_parent" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_weight="5"
+            android:orientation="horizontal"
+            android:paddingLeft="140dp"
+            android:paddingTop="28dp">
 
             <Button
                 android:id="@+id/btnBuscar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="2dp"
                 android:layout_weight="1"
                 android:text="Buscar" />
 
             <Button
                 android:id="@+id/btnBuscarTodos"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="2dp"
                 android:layout_weight="1"
                 android:text="Buscar todos" />
         </LinearLayout>
