--- a/AndroidProject/app/src/main/res/layout/filter_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/filter_menu.xml
@@ -23,7 +23,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.25"
                 android:orientation="horizontal">
 
                 <TextView
@@ -32,10 +32,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="#1565C0"
-                    android:gravity="center"
+                    android:gravity="center|top"
                     android:text="Filtrar"
                     android:textColor="#FFFFE0"
-                    android:textSize="35sp"
+                    android:textSize="21sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|left"
                     android:text="Compañía"
-                    android:textSize="23sp" />
+                    android:textSize="19sp" />
 
                 <Spinner
                     android:id="@+id/spnCompanhia"
@@ -75,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Provincia"
-                    android:textSize="23sp" />
+                    android:textSize="19sp" />
 
                 <Spinner
                     android:id="@+id/spnProvincia"
@@ -98,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Localidad"
-                    android:textSize="23sp" />
+                    android:textSize="19sp" />
 
                 <Spinner
                     android:id="@+id/spnLocalidad"
@@ -113,10 +113,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="7"
             android:orientation="horizontal"
             android:paddingLeft="140dp"
-            android:paddingTop="28dp">
+            android:paddingTop="8dp">
 
             <Button
                 android:id="@+id/btnBuscar"
