--- a/AndroidProject/app/src/main/res/layout/filter_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/filter_menu.xml
@@ -20,28 +20,21 @@
             android:background="#E0E0E0"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvFiltrar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.25"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvFiltrar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#1565C0"
-                    android:gravity="center|top"
-                    android:text="Filtrar"
-                    android:textColor="#FFFFE0"
-                    android:textSize="21sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:background="#1565C0"
+                android:gravity="center"
+                android:text="Filtrar"
+                android:textColor="#FFFFE0"
+                android:textSize="21sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:paddingLeft="40dp">
@@ -59,13 +52,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="32dp"
                     android:dropDownWidth="match_parent" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:paddingLeft="40dp">
@@ -82,12 +76,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="32dp"
                     android:dropDownWidth="match_parent" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:backgroundTintMode="add"
                 android:orientation="vertical"
@@ -105,6 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="32dp"
                     android:dropDownWidth="match_parent" />
             </LinearLayout>
 
@@ -115,14 +111,14 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:orientation="horizontal"
-            android:paddingLeft="140dp"
-            android:paddingTop="8dp">
+            android:paddingLeft="140dp">
 
             <Button
                 android:id="@+id/btnBuscar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:text="Buscar" />
 
@@ -132,7 +128,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
                 android:layout_weight="1"
-                android:text="Buscar todos" />
+                android:text="Buscar todos"
+                android:textSize="14sp" />
         </LinearLayout>
 
     </LinearLayout>
