--- a/AndroidProject/app/src/main/res/layout/filter_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/filter_menu.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvFiltroCompanhia"
+                android:id="@+id/tvFiltrarCompañia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
