--- a/AndroidProject/app/src/main/res/layout/sort_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/sort_menu.xml
@@ -71,6 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spnCriterio">
 
         <RadioGroup
+            android:id="@+id/rgAscDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
