Anahdir Coste total del puesto y test unitario

--- a/AndroidProject/app/src/main/res/layout/sort_menu.xml
+++ b/AndroidProject/app/src/main/res/layout/sort_menu.xml
@@ -73,7 +73,7 @@
         <RadioGroup
             android:id="@+id/rgAscDesc"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <RadioButton
