--- a/AndroidProject/app/src/main/res/layout/activity_main_item.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_item.xml
@@ -39,11 +39,9 @@
         android:id="@+id/tvInfoAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
-        app:layout_constraintStart_toStartOf="@+id/tvAddress"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintStart_toStartOf="@+id/tvAddress" />
 
     <TextView
         android:id="@+id/tvCosteTotalCarga"
